Arrrglo de nimbre y cambio de imagen repetida

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                     />
                   </figure>
                   <div class="card-content">
-                    <h3 class="section-text">CLaudia Ferrera</h3>
+                    <h3 class="section-text">Claudia Ferreira</h3>
                     <p class="section-subtitle">UX/UI DESIGNER</p>
                     <ul class="list-social">
                       <li>
@@ -481,7 +481,7 @@
                 <div class="team-card">
                   <figure class="card-banner">
                     <img
-                      src="./assets/img/team/img-2 copy 2.png"
+                      src="./assets/img/team/img-4.png"
                       loading="lazy"
                       alt="img-team"
                     />
