cambio de imagen

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                 <div class="team-card">
                   <figure class="card-banner">
                     <img
-                      src="./assets/img/team/img3.png"
+                      src="./assets/img/team/img.png"
                       loading="lazy"
                       alt="img-team"
                     />
