cambio de imagen

--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                 <div class="team-card">
                   <figure class="card-banner">
                     <img
-                      src="./assets/img/team/img-4.png"
+                      src="./assets/img/team/imgo.png"
                       loading="lazy"
                       alt="img-team"
                     />
